--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "prettier": "prettier '{app/**/*.ts,src/**/*.tsx}' --write"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.8.1",
+    "@emotion/react": "^11.14.0",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
     "isbot": "^5.1.17",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.2.0"
   },
   "devDependencies": {
@@ -21,6 +26,8 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "prettier": "^3.5.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "react-router-devtools": "^1.1.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
