--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@emotion/react": "^11.14.0",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "i18next": "^25.0.1",
+    "i18next-resources-to-backend": "^1.2.1",
     "isbot": "^5.1.17",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0"
   },
