--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "public-matkadobska-front",
+  "name": "public-mdobska-front",
   "private": true,
   "type": "module",
   "scripts": {
