--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
-    "prettier": "prettier '{app/**/*.ts,src/**/*.tsx}' --write"
+    "prettier": "prettier '{app/**/*.ts,src/**/*.tsx}' --write",
+    "deploy": "yarn build && firebase deploy"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.8.1",
+    "@chakra-ui/react": "3.16.1",
     "@emotion/react": "^11.14.0",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
@@ -18,6 +19,7 @@
     "i18next-resources-to-backend": "^1.2.1",
     "isbot": "^5.1.17",
     "lucide-react": "^0.475.0",
+    "motion": "^12.10.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
